crates/backyard-parser/tests/snapshots/yields__basic.snap
---
source: crates/backyard-parser/tests/yields.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: yield
    key: ~
    value: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 0
        offset: 0
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 5
    offset: 5
leadings: ~
trailings: ~
