crates/backyard-parser/tests/snapshots/yields__from.snap
---
source: crates/backyard-parser/tests/yields.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: yield_from
    statement:
      node_type: variable
      name:
        node_type: identifier
        name: a
        loc:
          start:
            line: 1
            column: 11
            offset: 11
          end:
            line: 1
            column: 12
            offset: 12
        leadings: []
        trailings: []
      loc:
        start:
          line: 1
          column: 11
          offset: 11
        end:
          line: 1
          column: 12
          offset: 12
      leadings: []
      trailings: []
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 11
        offset: 11
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 13
    offset: 13
leadings: []
trailings: []
