crates/backyard-parser/tests/snapshots/yields__with_key.snap
---
source: crates/backyard-parser/tests/yields.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: yield
    key:
      node_type: variable
      name:
        node_type: identifier
        name: a
        loc:
          start:
            line: 1
            column: 6
            offset: 6
          end:
            line: 1
            column: 7
            offset: 7
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 6
          offset: 6
        end:
          line: 1
          column: 7
          offset: 7
      leadings: ~
      trailings: ~
    value:
      node_type: variable
      name:
        node_type: identifier
        name: b
        loc:
          start:
            line: 1
            column: 12
            offset: 12
          end:
            line: 1
            column: 13
            offset: 13
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 12
          offset: 12
        end:
          line: 1
          column: 13
          offset: 13
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 12
        offset: 12
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 14
    offset: 14
leadings: ~
trailings: ~
